Add sae_DROID_runs/create dataset nb via upload
removing hardcoded file paths and cell outputs

--- a/droid_SAE_runs.ipynb
+++ b/droid_SAE_runs.ipynb
@@ -151,9 +151,9 @@
    "source": [
     "BIG_MODEL_ID = \"google/paligemma2-3b-pt-896\"\n",
     "SMALL_MODEL_ID = \"google/paligemma2-3b-pt-224\"\n",
-    "FINETUNE_PATH_SINGLE_896 = \"/home/henrytsai/dhruv/roboterp/finetuned_paligemma_single.pt\"\n",
-    "FINETUNE_PATH_SINGLE_224 = \"/home/henrytsai/dhruv/roboterp/paligemma_converted_jax_weights_multimodal.pt\"\n",
-    "FINETUNE_PATH_COLLAGE = \"/home/henrytsai/dhruv/roboterp/finetuned_paligemma.pt\"\n",
+    "FINETUNE_PATH_SINGLE_896 = \"../finetuned_paligemma_single.pt\"\n",
+    "FINETUNE_PATH_SINGLE_224 = \"../paligemma_converted_jax_weights_multimodal.pt\"\n",
+    "FINETUNE_PATH_COLLAGE = \"../finetuned_paligemma.pt\"\n",
     "\n",
     "available_models = {\n",
     "    \"big_base\": {\"model_id\": BIG_MODEL_ID, \"finetuned\": False},\n",
@@ -651,21 +651,13 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59f0c9cf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (ishan)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ishan"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -677,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
